--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -95,7 +95,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
