--- a/reports.html
+++ b/reports.html
@@ -93,7 +93,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1c">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1c">
 
     
 
@@ -151,7 +151,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a></div>
-                        <img src="assets/images/background16.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background126.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -168,7 +168,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background27.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background227.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -186,7 +186,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.co" class="btn btn-primary display-4">Learn More</a>
                         </div>
-                        <img src="assets/images/background38.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background328.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">LMIS Reports &amp; Indicators</h4>
@@ -337,7 +337,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background15.jpg" alt="Mobirise">
+                        <img src="assets/images/background125.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Indicators and reports</strong></h4>
@@ -353,7 +353,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background20.jpg" alt="Mobirise">
+                        <img src="assets/images/background220.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Indicators and reports</strong></h4>
@@ -369,7 +369,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background31.jpg" alt="Mobirise">
+                        <img src="assets/images/background321.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Indicators and reports</strong></h4>
