--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -97,7 +97,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -121,7 +121,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fnvn3kn54nkGsHqK3ulBVoaX16SxGVWSl7tvxe+ZyR03quJEOslPD3f/WcfLRePZO0EbY+alJudRzCyn/P77dNJZmEz2d7tLiduWIc0/9z+VkGsMbhK/bxdZ1vLzvNA=.vXpcZOHeZAGcFojzlhaCHnyhpcXcgWY81ay+nsA9iHOIkrd2LrW7VKYVsZvJ3qrU0eiqNl+GNF5gYZ69fZpmwJx5f758tdEVA6nv3UT2qxEk/FB3K+XeKBjKk+P+Yn6O">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7SjfXUm2L28aytl8ik+Otgrbkgkac+N+LdS5wv7NM0Ffj/GBXlXKOkah9TEqS4/KuNN8cPANys6ftPRTNJvzXeUJwh60NR767WaQ+t5T7ad9mKn5hh5ssNh70pcNXnc+.gORpVfSW7zblUp5flyXZjBhvv35kwg0OjhzwQsuX5HqF+vfdkexA8gEXebQEfT2GVZ3DzgAVaa6+/sJiaJIzzekUpfZ4nCzcIWp3OQxjNyK+tJzQ1Oi0HouARWAnGCZ8">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
